--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ bin/
 .project
 *.class
 output_max_iterations.txt
+cpp_src/ProcGen_CPlusPlus/
+cpp_src/build-ProcGen_CPlusPlus-Desktop_Qt_5_8_0_MinGW_32bit-Debug/
+cpp_src/proc_gen
